--- a/web/html/index.html
+++ b/web/html/index.html
@@ -56,7 +56,26 @@
       border-color: rgb(115, 168, 146);
       font-weight:600;
     }
+    .buttons-vert {
+      height: 40px;
+      font-size: large;
+      font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
+      border-radius: 0;
+      border-width: 2px;
+      background-color:rgb(157, 223, 196);
+      color: rgb(11, 36, 25);
+      border-color: rgb(115, 168, 146);
+      font-weight:600;
+      width: 400px;
+    }
     .container {
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      height: 45%;
+    }
+    .container-vert {
+      flex-direction: column;
       display: flex;
       justify-content: space-around;
       align-items: center;
@@ -81,8 +100,9 @@
     <span class="contained" style="flex-grow: 10;">
       ===USERDATA===
     </span>
-    <span class="contained" style="flex-grow: 1;">
-      <button class="buttons" onclick="">Написать пациенту</button>
+    <span class="container-vert" style="flex-grow: 1;">
+      <button class="buttons-vert" onclick="">Написать пациенту</button>
+      <button class="buttons-vert" onclick="window.open(window.location.pathname+'/journal','_blank');">Открыть дневник измерений</button>
     </span>
   </div>
   <div id="graph-area" class="graph">
@@ -90,8 +110,6 @@
     <script>
       const higher = (ctx,value,border) => ctx.p0.parsed.y > border || ctx.p1.parsed.y > border ? value : undefined;
       const lower = (ctx,value,border) => ctx.p0.parsed.y < border || ctx.p0.parsed.y < border ? value : undefined;
-      const higher_point = (ctx,value,border) => ctx.p0.parsed.y > border ? value : undefined;
-      const lower_point = (ctx,value,border) => ctx.p0.parsed.y < border ? value : undefined;
       const canvas = document.getElementById('graph-canvas');
       const context = canvas.getContext('2d');
       window.addEventListener('resize', resizeCanvas, false);
@@ -149,7 +167,7 @@
               }
             },
             interaction:{
-              intersect: true,
+              intersect: false,
               mode: 'index',
             },
           },
