--- a/web/index.html
+++ b/web/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>ЫЫЫЫЫ</title> 
+  <title>МИАЦ</title> 
   <script src="dist/chart.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/hammerjs@2.0.8"></script>
   <script src="dist/chartjs-plugin-zoom.js"></script>
